--- a/accountscpd/financial_planning.html
+++ b/accountscpd/financial_planning.html
@@ -25,6 +25,8 @@ to {opacity: 1; transform: translateX(0);}
 .nav-button {background: linear-gradient(135deg, #C6A906, #e0c040); color: white; border: none; padding: 14px 35px; border-radius: 25px; font-size: 16px; font-weight: 700; cursor: pointer; transition: all 0.3s ease; display: flex; align-items: center; gap: 10px;}
 .nav-button:hover:not(:disabled) {transform: translateY(-2px); box-shadow: 0 4px 15px rgba(198,169,6,0.3);}
 .nav-button:disabled {background: #ccc; cursor: not-allowed; opacity: 0.5;}
+.completion-message {display: none; background: linear-gradient(135deg, #4caf50, #66bb6a); color: white; padding: 18px 35px; border-radius: 25px; font-size: 16px; font-weight: 600; text-align: center; line-height: 1.6;}
+.completion-message.active {display: block;}
 .section-title {font-size: 24px; font-weight: 700; color: #333; margin-bottom: 20px;}
 .section-text {font-size: 15px; line-height: 1.8; color: #555; margin-bottom: 15px;}
 .interactive-card {background: linear-gradient(135deg, #fff8e1 0%, #fffbf0 100%); border: 3px solid #C6A906; border-radius: 12px; padding: 25px; margin: 20px 0; cursor: pointer; transition: all 0.3s ease;}
@@ -96,7 +98,6 @@ to {opacity: 1; transform: translateX(0);}
 <div class="container">
 <div class="carousel-wrapper">
 <div class="carousel-header">
-<div class="carousel-slide-number" id="slideNumber">Section 1 of 5</div>
 <div class="carousel-progress">
 <div class="progress-dot active"></div>
 <div class="progress-dot"></div>
@@ -344,15 +345,17 @@ dots[currentSlide].classList.remove('active');
 currentSlide += direction;
 slides[currentSlide].classList.add('active');
 dots[currentSlide].classList.add('active');
-document.getElementById('slideNumber').textContent = 'Section ' + (currentSlide + 1) + ' of ' + totalSlides;
 const prevBtn = document.getElementById('prevBtn');
 const nextBtn = document.getElementById('nextBtn');
+const completionMsg = document.getElementById('completionMsg');
 prevBtn.disabled = currentSlide === 0;
 if (currentSlide === totalSlides - 1) {
 nextBtn.style.display = 'none';
+completionMsg.classList.add('active');
 } else {
 nextBtn.style.display = 'flex';
 nextBtn.disabled = false;
+completionMsg.classList.remove('active');
 }
 window.scrollTo(0, 0);
 };
@@ -361,6 +364,9 @@ window.scrollTo(0, 0);
 <button class="nav-button" id="prevBtn" onclick="changeSlide(-1)" disabled>
 <span>←</span> Previous
 </button>
+<div class="completion-message" id="completionMsg">
+✓ Section Complete — You can now move on to answering the questions in the course.
+</div>
 <button class="nav-button" id="nextBtn" onclick="changeSlide(1)">
 Next <span>→</span>
 </button>
